--- a/modules/boonex/files/templates/base/wall_outline.html
+++ b/modules/boonex/files/templates/base/wall_outline.html
@@ -21,17 +21,17 @@
 						<div class="wall-oii-posted __mod_prefix__-wall-oii-posted bx-def-font-small bx-def-font-grayed">__post_ago__</div>
 					</div>
 				</div>
-				<div class="wall-oii-comments __mod_prefix__-wall-oii-comments bx-def-margin-sec-top bx-def-border bx-def-round-corners">
-					<i class="sys-icon comment-o"></i>
-					<a href="__item_comments_link__">__item_comments__</a>
+				<div class="wall-oii-actions bx-def-margin-sec-top">
+					<div class="wall-comment">
+						<a class="wall-oii-action wall-oii-action-comment bx-btn bx-btn-small" href="__item_comments_link__" title="<bx_text_attribute:_wall_comment />">
+							<i class="sys-icon comment-o"></i>
+						</a>
+						<div class="wall-oii-action-counter">__item_comments__</div>
+					</div>
+					__post_vote__
+					__post_repost__
 				</div>
 	        </div>
 	    </div>
 	</div>
-	<!--
-	TODO: Remove it if Andrew won't restore the Icons back.
-    <div class="wall-oi-item-circle __mod_prefix__-wall-oi-item-circle bx-def-shadow">
-		<i class="sys-icon __mod_icon__"></i>
-	</div>
-	-->
 </div>
