--- a/modules/boonex/wall/templates/base/voting.html
+++ b/modules/boonex/wall/templates/base/voting.html
@@ -1,10 +1,7 @@
-<div id="__html_id__" class="wall-post-voting">
+<div id="__html_id__" class="wall-voting">
 	<script language="javascript">
 		var __js_object__ = new BxDolVoting('<bx_url_root />', '__name__', '__object_id__', '__html_id__', '__html_id_slider__', __size_x__, __max__);
 	</script>
-	<a class="wall-post-voting-vote" href="javascript:void(0)" onclick="javascript:__js_object__.vote(__max__)" title="<bx_text_attribute:_wall_do_vote />">
-		<i class="sys-icon thumbs-up"></i>
-		<bx_if:show_count><b class="wall-post-voting-count">__count__</b></bx_if:show_count>
-	</a>
-	<div id="__html_id_slider__" class="wall-post-voting-slider"></div>
+	__do_vote__
+	<div id="__html_id_slider__" class="wall-voting-slider"></div>
 </div>
