--- a/modules/boonex/sites/templates/base/wall_outline.html
+++ b/modules/boonex/sites/templates/base/wall_outline.html
@@ -3,15 +3,14 @@
 	    <div class="wall-oi-item-cnt __mod_prefix__-wall-oi-item-cnt bx-def-round-corners bx-def-shadow">
 	    	<div class="wall-oii-image-wrp __mod_prefix__-wall-oii-image-wrp bx-def-padding-sec-topbottom">
 	            <div class="wall-oii-image __mod_prefix__-wall-oii-image bx-def-margin-sec-top-auto">
-	
 	                <bx_if:is_image>
 	                    <div class="bx_sites_unit_outline">
-	                        <span></span><a href="__item_page__"><img class="bx-def-shadow bx-def-round-corners" src="__image__" /></a>
+	                        <a href="__item_page__"><img class="bx-def-shadow bx-def-round-corners" src="__image__" /></a>
 	                    </div>
 	                </bx_if:is_image>
 	                <bx_if:is_thumbhtml>
 	                    <div class="bx_sites_unit_outline">
-	                        <span></span><a href="__item_page__">__thumbhtml__</a>
+	                        <a href="__item_page__">__thumbhtml__</a>
 	                    </div>
 	                </bx_if:is_thumbhtml>
 	
@@ -34,9 +33,15 @@
 						<div class="wall-oii-posted __mod_prefix__-wall-oii-posted bx-def-font-small bx-def-font-grayed">__post_ago__</div>
 					</div>
 				</div>
-				<div class="wall-oii-comments __mod_prefix__-wall-oii-comments bx-def-margin-sec-top bx-def-border bx-def-round-corners">
-					<i class="sys-icon comment-o"></i>
-					<a href="__item_comments_link__">__item_comments__</a>
+				<div class="wall-oii-actions bx-def-margin-sec-top">
+					<div class="wall-comment">
+						<a class="wall-oii-action wall-oii-action-comment bx-btn bx-btn-small" href="__item_comments_link__" title="<bx_text_attribute:_wall_comment />">
+							<i class="sys-icon comment-o"></i>
+						</a>
+						<div class="wall-oii-action-counter">__item_comments__</div>
+					</div>
+					__post_vote__
+					__post_repost__
 				</div>
 	        </div>
 	    </div>
