--- a/modules/boonex/files/templates/base/wall_outline_grouped.html
+++ b/modules/boonex/files/templates/base/wall_outline_grouped.html
@@ -25,7 +25,7 @@
 						<a class="wall-oii-action wall-oii-action-comment bx-btn bx-btn-small" href="__album_comments_link__" title="<bx_text_attribute:_wall_comment />">
 							<i class="sys-icon comment-o"></i>
 						</a>
-						<div class="wall-oii-action-counter">__album_comments__</div>
+						<div class="wall-comment-counter-holder">__album_comments__</div>
 					</div>
 					__post_vote__
 					__post_repost__
