--- a/modules/boonex/wall/templates/base/outline_item_image.html
+++ b/modules/boonex/wall/templates/base/outline_item_image.html
@@ -26,7 +26,7 @@
 						<a class="wall-oii-action wall-oii-action-comment bx-btn bx-btn-small" href="__item_comments_link__" title="<bx_text_attribute:_wall_comment />">
 							<i class="sys-icon comment-o"></i>
 						</a>
-						<div class="wall-oii-action-counter">__item_comments__</div>
+						<div class="wall-comment-counter-holder">__item_comments__</div>
 					</div>
 					__post_vote__
 					__post_repost__
