#73 Forms: make value wrapped when it is displaying

--- a/templates/base/css/forms_adv.css
+++ b/templates/base/css/forms_adv.css
@@ -57,14 +57,12 @@
 	width: 50%;
 }
 
-.form_advanced_table .bx-form-caption,
-.form_advanced_table .bx-form-value {
+.form_advanced_table .bx-form-caption {
     vertical-align: top;
     white-space: nowrap;
 }
 
 .form_advanced_table .input_wrapper_wraptext,
-.form_advanced_table .input_wrapper_value,
 .form_advanced_table .bx-form-value label {
     white-space: normal;
 }
