--- a/administration/templates/base/css/default.css
+++ b/administration/templates/base/css/default.css
@@ -24,7 +24,7 @@
 /* fonts */
 .bx-def-font,
 .bx-def-font-inputs {
-    font-family: Roboto, Noto, Open Sans, Helvetica Neue, Helvetica, sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 400;
     
 }
