--- a/administration/templates/base/_header.html
+++ b/administration/templates/base/_header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html dir="__dir__">
 	<head>
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 		<meta http-equiv="Content-Type" content="text/html; charset=__page_charset__" />
@@ -7,7 +7,6 @@
 		<title>__page_header__</title>
 
 		<bx_include_css />
-		<link href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900' rel='stylesheet' type='text/css' />
 
 		<bx_include_js />
 
