--- a/templates/base/_header.html
+++ b/templates/base/_header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html dir="__dir__">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=__page_charset__" />
