--- a/templates/tmpl_evo/_header.html
+++ b/templates/tmpl_evo/_header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html dir="__dir__">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=__page_charset__" />
@@ -13,8 +13,6 @@
 
 	<bx_include_css_styles />
 	<bx_include_css />
-	<link href='//fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900' rel='stylesheet' type='text/css' />
-    <link href='//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800' rel='stylesheet' type='text/css' />
 
 	<bx_include_js />
     __dol_images__
