--- a/templates/tmpl_alt/css/common.css
+++ b/templates/tmpl_alt/css/common.css
@@ -1,7 +1,7 @@
 @import url(../../base/css/common.css);
 
 body {
-    background-image:url(../images/clouds.png);
+    background-image:url(../images/fabric.jpg);
     background-repeat:repeat;
 }
 
