#251 keywords search: checkboxes changed to buttons

--- a/templates/base/css/searchKeyword.css
+++ b/templates/base/css/searchKeyword.css
@@ -11,3 +11,11 @@
     margin: 5px auto;
 }
 
+.bx-btn-area {
+    text-align: center;
+}
+.bx-btn-area .bx-btn-centered {
+    margin: 0px 10px 10px 0px;
+    float: none;
+    display: inline;
+}
