--- a/templates/base/css/icons.css
+++ b/templates/base/css/icons.css
@@ -1,8 +1,8 @@
 
 @font-face {
   font-family: 'sys-user';
-  src: url('../fonts/fontawesome-webfont.eot?v=4.4.0');
-  src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.4.0') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2?v=4.4.0') format('woff2'), url('../fonts/fontawesome-webfont.woff?v=4.4.0') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.4.0') format('truetype'), url('../fonts/fontawesome-webfont.svg?v=4.4.0#fontawesomeregular') format('svg');
+  src: url('../fonts/fontawesome-webfont.eot?v=4.5.0');
+  src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.5.0') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2?v=4.5.0') format('woff2'), url('../fonts/fontawesome-webfont.woff?v=4.5.0') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.5.0') format('truetype'), url('../fonts/fontawesome-webfont.svg?v=4.5.0#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -1857,5 +1857,65 @@
 }
 .sys-icon.fonticons:before {
   content: "\f280";
+}
+.sys-icon.reddit-alien:before {
+  content: "\f281";
+}
+.sys-icon.edge:before {
+  content: "\f282";
+}
+.sys-icon.credit-card-alt:before {
+  content: "\f283";
+}
+.sys-icon.codiepie:before {
+  content: "\f284";
+}
+.sys-icon.modx:before {
+  content: "\f285";
+}
+.sys-icon.fort-awesome:before {
+  content: "\f286";
+}
+.sys-icon.usb:before {
+  content: "\f287";
+}
+.sys-icon.product-hunt:before {
+  content: "\f288";
+}
+.sys-icon.mixcloud:before {
+  content: "\f289";
+}
+.sys-icon.scribd:before {
+  content: "\f28a";
+}
+.sys-icon.pause-circle:before {
+  content: "\f28b";
+}
+.sys-icon.pause-circle-o:before {
+  content: "\f28c";
+}
+.sys-icon.stop-circle:before {
+  content: "\f28d";
+}
+.sys-icon.stop-circle-o:before {
+  content: "\f28e";
+}
+.sys-icon.shopping-bag:before {
+  content: "\f290";
+}
+.sys-icon.shopping-basket:before {
+  content: "\f291";
+}
+.sys-icon.hashtag:before {
+  content: "\f292";
+}
+.sys-icon.bluetooth:before {
+  content: "\f293";
+}
+.sys-icon.bluetooth-b:before {
+  content: "\f294";
+}
+.sys-icon.percent:before {
+  content: "\f295";
 }
 
