--- a/modules/boonex/wall/templates/base/post.html
+++ b/modules/boonex/wall/templates/base/post.html
@@ -1,14 +1,14 @@
 <div class="wall-post bx-def-bc-margin">    
     <iframe class="wall_hidden" name="WallPostIframe"></iframe>
     <!-- Post Text -->
-    <div id="wall-ptype-cnt-text" class="wall-ptype-cnt wall_text">__post_wall_text__</div>
+    <div id="wall-ptype-cnt-text" class="wall-ptype-cnt wall_text__class_text__">__content_text__</div>
     <!-- Post Link -->
-    <div id="wall-ptype-cnt-link" class="wall-ptype-cnt wall_link">__post_wall_link__</div>
+    <div id="wall-ptype-cnt-link" class="wall-ptype-cnt wall_link__class_link__">__content_link__</div>
     <!-- Post Photo -->
-    <div id="wall-ptype-cnt-photo" class="wall-ptype-cnt wall_photo">__post_wall_photo__</div>
-    <!-- Post Video -->
-    <div id="wall-ptype-cnt-video" class="wall-ptype-cnt wall_video">__post_wall_video__</div>
+    <div id="wall-ptype-cnt-photo" class="wall-ptype-cnt wall_photo__class_photo__">__content_photo__</div>
     <!-- Post Sound -->
-    <div id="wall-ptype-cnt-sound" class="wall-ptype-cnt wall_sound">__post_wall_sound__</div>
-	__post_js_content__
+    <div id="wall-ptype-cnt-sound" class="wall-ptype-cnt wall_sound__class_sound__">__content_sound__</div>
+    <!-- Post Video -->
+    <div id="wall-ptype-cnt-video" class="wall-ptype-cnt wall_video__class_video__">__content_video__</div>
+	__js_code__
 </div>
