--- a/administration/templates/base/css/general.css
+++ b/administration/templates/base/css/general.css
@@ -39,6 +39,8 @@ a img {
 /*--- Top Header ---*/
 div.adm-header {
 	position: relative;
+    width: 100%;
+    min-width: 1000px;
     height: 50px;
     overflow: hidden;
 
@@ -54,7 +56,6 @@ div.adm-header {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
 }
 div.adm-header-content {
-    width: 1140px;
     margin: 0px auto;
 }
 div.adm-header-title {
@@ -154,10 +155,11 @@ div.adm-tm-item-active .sys-icon {
 
 /*--- Middle Part ---*/
 div.adm-middle {
+    width: 100%;
+    min-width: 1000px;
     padding: 30px 0px;
 }
 div.adm-middle-center {
-	width: 1140px;
 	margin: 0px auto;
 }
 div.adm-middle-cnt {}
@@ -184,14 +186,14 @@ td.adm-middle-main {
 }
 
 div.adm-page-header {
-    margin: 0px 0px 0px 34px;
+    margin: 0px 0px 0px 20px;
 
 	text-align: center;
 	font-weight: bold;
 	font-size: 30px;
 }
 div.adm-page-content {
-	margin: 0px 0px 0px 34px;
+	margin: 0px 0px 0px 20px;
 }
 
 /*--- Main Menu ---*/
