#298 interface for HEAD and BODY injections

--- a/administration/templates/base/page_4.html
+++ b/administration/templates/base/page_4.html
@@ -3,5 +3,6 @@
     __page_code_settings__        
     __page_code_logo__
     __page_code_promo__
+    __page_code_injectins__
     <!-- Design Box [ End ] here  -->
 <bx_include_auto:_sub_footer.html />
