#299 corrected boonex.com links

--- a/administration/templates/base/hosting_promo.html
+++ b/administration/templates/base/hosting_promo.html
@@ -26,7 +26,7 @@
 <div class="adm-hosting-promo">
 	<i class="sys-icon desktop"></i>
 	<div>
-		<a target="_blank" href="http://www.boonex.com/hosting/"><bx_text:_adm_txt_hosting_title /></a>
+		<a target="_blank" href="https://www.boonex.com/hosting/"><bx_text:_adm_txt_hosting_title /></a>
 		<bx_text:_adm_txt_hosting_text />
 	</div>
 </div>
