--- a/administration/templates/base/_sub_header.html
+++ b/administration/templates/base/_sub_header.html
@@ -20,7 +20,7 @@
                                     var sVerCur = '__current_version__';
                                     var sVerNew = $(sData).find('dolphin').html(); 
                                     if(sVerNew != undefined && sVerNew != null && sVerNew != '' && sVerNew != sVerCur)
-                                        $('#adm-header-update').html('<a href="http://www.boonex.com/dolphin/download/"><bx_text:_adm_txt_dashboard_update_to /> ' + sVerNew + ' <bx_text:_adm_txt_dashboard_update_now /></a>');
+                                        $('#adm-header-update').html('<a href="https://www.boonex.com/downloads"><bx_text:_adm_txt_dashboard_update_to /> ' + sVerNew + ' <bx_text:_adm_txt_dashboard_update_now /></a>');
                                 },
                                 'text'
                             );
@@ -43,7 +43,7 @@
             					<bx_injection:injection_main_menu_before />
                                 __main_menu__
                                 <bx_injection:injection_main_menu_after />
-                                <div class="adm-copyright bx-def-margin-sec-top">&copy; <a href="http://www.boonex.com/">BoonEx</a></div>
+                                <div class="adm-copyright bx-def-margin-sec-top">&copy; <a href="https://www.boonex.com/">BoonEx</a></div>
                                 <bx_injection:injection_copyright_after />
             				</td>
     
