--- a/templates/base/login_join_popup.html
+++ b/templates/base/login_join_popup.html
@@ -3,6 +3,6 @@
 		<li><a href="#tabs-login"><bx_text:_Login /></a></li>
 		<li><a href="#tabs-join"><bx_text:_Join_now /></a></li>
 	</ul>
-	<div id="tabs-login">__login_form__</div>
-	<div id="tabs-join">__join_form__</div>
+	<div id="tabs-login">__top_menu____login_form__</div>
+	<div id="tabs-join">__top_menu____join_form__</div>
 </div>
