--- a/modules/boonex/site_customize/templates/base/content_box.html
+++ b/modules/boonex/site_customize/templates/base/content_box.html
@@ -8,7 +8,7 @@
             <button class="bx-btn" type="__btn_type__" name="__btn_name__" onclick="__btn_action__">__btn_value__</button>
 	    </bx_repeat:buttons>
         <button class="bx-btn" type="button" name="close" onclick="javascript:oBxSctrMain.showBlock();">
-            <bx_text:_bx_profile_customize_btn_close />
+            <bx_text:_bx_sctr_btn_close />
         </button>
         <div class="clear_both"></div>
     </div>
