Allow EVO visitor service menu to be configured via admin
- first active item that is visible to non-members dictates how EVO
service menu displays to visitors.

--- a/templates/tmpl_evo/extra_service_menu_wrapper.html
+++ b/templates/tmpl_evo/extra_service_menu_wrapper.html
@@ -1,13 +1,13 @@
 <div class="sys-service-menu-wrp">
 	<div class="sys-service-menu">
 		<bx_if:show_for_visitor>
-			<div class="sys-sm-item sys-smi-join bx-def-margin-sec-left-auto" onclick="javascript:showPopupJoinForm()">
+			<div class="sys-sm-item sys-smi-join bx-def-margin-sec-left-auto" __script__">
 				<div class="sys-sm-profile">
 					<span class="sys-smp-thumbnail">
-						<i class="sys-icon user"></i>
+						<i class="sys-icon __icon__"></i>
 					</span>
 					<span class="sys-smp-title bx-def-margin-sec-left bx-def-margin-right">
-						<bx_text:_sys_sm_join_or_login />
+						__caption__
 					</span>
 				</div>
 	        </div>
