--- a/templates/base/css/cmts.css
+++ b/templates/base/css/cmts.css
@@ -45,6 +45,10 @@
 	   right: 0px;
 	}
 
+	.cmt-loading {
+		display: none;
+	}
+
     /*--- Comment/Reply Box Styles ---*/          
     div.cmt-cont {
         position: relative;/*keep*/
