--- a/modules/boonex/wall/templates/base/common.html
+++ b/modules/boonex/wall/templates/base/common.html
@@ -1,5 +1,5 @@
 <div class="wall-caption wall-caption-__post_type__">   
-	<a href="__author_url__" class="wall-author">__author_username__</a> __cpt_added_new__
+	<span class="wall-caption-owner">__author_username__</span> __cpt_added_new__.&nbsp;
 	<bx_if:show_wall_owner>
 		<i class="wall-caption-divider sys-icon chevron-right"></i>
 		<a href="__owner_url__" class="wall-author">__owner_username__</a>
