Ticket #335 - Issue #12 (related changes)

--- a/templates/base/uploader_html5.html
+++ b/templates/base/uploader_html5.html
@@ -145,7 +145,7 @@
 
 
     <div id="bx-__upload_type__-buttons-panel" class="b-button js-fileapi-wrapper bx-btn">
-        <div class="b-button__text"><bx_text:_sys_txt_select_files /></div>
+        <div class="b-button__text">__txt_select_files__</div>
         <input name="files" class="b-button__input" type="file" accept="__accept_mime_type__" __multiple__ />
     </div>
 
