--- a/modules/boonex/wall/templates/base/comments.html
+++ b/modules/boonex/wall/templates/base/comments.html
@@ -1,5 +1,5 @@
-<div id="cmts-box-__cmt_system__-__cmt_object__">
-    __cmt_actions__
+<div id="cmts-box-__cmt_system__-__cmt_object__" class="cmts-box-__cmt_system__-__cmt_object__">
+    __actions__
     <div class="cmt-reply"></div>
     <div class="cmts">
         <ul class="cmts">
