--- a/templates/base/css/common.css
+++ b/templates/base/css/common.css
@@ -26,6 +26,11 @@ body {
 
     color: #999999;
 }
+.sys-bullet-narrow:before {
+    content: "\00b7";
+
+    color: #999999;
+}
 
 blockquote {
     border-left: 2px solid #ccc;
