--- a/modules/boonex/wall/templates/base/voting.html
+++ b/modules/boonex/wall/templates/base/voting.html
@@ -1,7 +1,7 @@
 <div id="__html_id__" class="wall-voting">
-	<script language="javascript">
-		var __js_object__ = new BxDolVoting('<bx_url_root />', '__name__', '__object_id__', '__html_id__', '__html_id_slider__', __size_x__, __max__);
-	</script>
 	__do_vote__
-	<div id="__html_id_slider__" class="wall-voting-slider"></div>
+	<div class="votes_slider wall-voting-slider"></div>
+	<script language="javascript">
+		var __js_object__ = new BxDolVoting({sSystem: '__system__', iObjId: '__object_id__', sBaseUrl: '<bx_url_root />', iSize: __size_x__, iMax: __max__, sHtmlId: '__html_id__'});
+	</script>
 </div>
